--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,36 +4,21 @@
   become: true
   tasks:
 
-  - name: update repo index
+  - name: install the apache2 package
     apt:
+      name: 
+        - apache2
+        - libapache2-mod-php
+      state: latest
       update_cache: yes 
     when: ansible_distribution == "Ubuntu"
 
   - name: install the apache2 package
-    apt:
-      name: apache2
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-
-  - name: add php support for apache
-    apt:
-      name: libapache2-mod-php
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-
-  - name: update repo index
     dnf: 
+      name: 
+        - httpd
+        - php 
+      state: latest
       update_cache: yes 
     when: ansible_distribution == "CentOS"
 
-  - name: install the apache2 package
-    dnf: 
-      name: httpd 
-      state: latest
-    when: ansible_distribution == "CentOS"
-
-  - name: add php support for apache
-    dnf:
-      name: php
-      state: latest
-    when: ansible_distribution == "CentOS"
