changed to general package module

--- a/install_apache.yml
+++ b/install_apache.yml
@@ -5,20 +5,9 @@
   tasks:
 
   - name: install the apache2 package
-    apt:
+    package: 
       name: 
-        - apache2
-        - libapache2-mod-php
+        - "{{ apache_package }}"
+        - "{{ php_package }}"
       state: latest
       update_cache: yes 
-    when: ansible_distribution == "Ubuntu"
-
-  - name: install the apache2 package
-    dnf: 
-      name: 
-        - httpd
-        - php 
-      state: latest
-      update_cache: yes 
-    when: ansible_distribution == "CentOS"
-
